toolchain/internal/core/analysis/testdata/errors/rpcs/proc_stream_same_name.ufo
// @expect: E503

rpc Users {
	proc GetUser {
		input { id: string }
		output { name: string }
	}
	stream GetUser {
		input { id: string }
		output { event: string }
	}
}
